# ChangeLog for x11-misc/xrestop
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xrestop/ChangeLog,v 1.13 2005/09/17 02:04:39 agriffis Exp $

  17 Sep 2005; Aron Griffis <agriffis@gentoo.org> xrestop-0.3.ebuild:
  Mark 0.3 stable on alpha

  05 Aug 2005; Fernando J. Pereda <ferdy@gentoo.org> xrestop-0.3.ebuild:
  marked ~alpha, wrt bug #98527

  19 Jul 2005; Jeremy Huddleston <eradicator@gentoo.org> xrestop-0.3.ebuild:
  Stable amd64, added to ~sparc, einstall->DESTDIR.

  17 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> xrestop-0.3.ebuild:
  Stable on ppc.

  14 Jun 2005; Jonathan Smith <smithj@gentoo.org> xrestop-0.3.ebuild:
  fixed homepage for #93132 and marked 0.3 stable

  05 Apr 2005; Marcus D. Hanwell <cryos@gentoo.org> xrestop-0.2.ebuild:
  Marked amd64, closes bug 87938.

*xrestop-0.3 (28 Sep 2004)

  28 Sep 2004; <pyrania@gentoo.org> +xrestop-0.3.ebuild:
  Version bump.

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> xrestop-0.2.ebuild:
  Masked xrestop-0.2.ebuild stable for ppc

  11 Apr 2004; Markus Nigbur <pyrania@gentoo.org> xrestop-0.2.ebuild:
  Marked stable on x86.

  16 Mar 2004; <augustus@gentoo.org> xrestop-0.2.ebuild:
  Marked ~amd64.

  06 Jan 2004; Luca Barbato <lu_zero@gentoo.org> xrestop-0.2.ebuild:
  Marked ~ppc

*xrestop-0.2 (04 Jan 2004)

  04 Jan 2004; Ian Leitch <port001@gentoo.org> xrestop-0.2.ebuild:
  Initial commit; #36439
