@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xrestop/Attic/xrestop-0.2.ebuild,v 1.7 2005/04/05 15:27:58 cryos Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xrestop/Attic/xrestop-0.2.ebuild,v 1.8 2005/10/13 23:53:34 swegener Exp $
 
 IUSE=""
 
@@ -12,7 +12,7 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="x86 ppc amd64"
 
-RDEPEND="virtual/x11"
+DEPEND="virtual/x11"
 
 src_install () {
 	einstall || die
