@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/xrestop
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xrestop/ChangeLog,v 1.13 2005/09/17 02:04:39 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xrestop/ChangeLog,v 1.14 2005/10/13 23:53:34 swegener Exp $
+
+  13 Oct 2005; Sven Wegener <swegener@gentoo.org> xrestop-0.2.ebuild,
+  xrestop-0.3.ebuild:
+  virtual/x11 is needed at compile-time
 
   17 Sep 2005; Aron Griffis <agriffis@gentoo.org> xrestop-0.3.ebuild:
   Mark 0.3 stable on alpha
